objects/Customer_Segmentation__c.object
<CustomObject>
    <fields>
        <fullName>Growth_Potential_Year__c</fullName>
        <description>R5 Growth Potential Year</description>
        <inlineHelpText>The year which referes to the segmenatation</inlineHelpText>
        <label>Account Segmentation Year</label>
        <picklist>
            <picklistValues>
                <fullName>1991</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1992</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1993</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Growth_Potential__c</fullName>
        <label>Growth Potential %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Industry_Usage__c</fullName>
        <description>R5 - Industry Usage  for Customer Segmentation</description>
        <label>Industry Usage</label>
        <picklist>
            <picklistValues>
                <fullName>BLD.9.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.10.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.2.12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.2.13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.5.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.8.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.3.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Segmentation_Year__c</fullName>
        <description>R5 Marketing Segmentation Year</description>
        <inlineHelpText>Heat Map reference year.</inlineHelpText>
        <label>Heat Map Year</label>
        <picklist>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2025</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PIE_Customer_Marketing_Segmentation__c</fullName>
        <description>R5 - PIE Customer Marketing Segmentation</description>
        <inlineHelpText>ABB position at the Account</inlineHelpText>
        <label>Heat Map</label>
        <picklist>
            <picklistValues>
                <fullName>Preferred Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplier amongst others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved/Weak supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Lookup to Product Group</description>
        <inlineHelpText>Product Group.  The enter PG will automatically update both the assigned Division &amp; BU in the above fields for this particular PG.</inlineHelpText>
        <label>Product Group</label>
        <referenceTo>Product_Group__c</referenceTo>
        <relationshipLabel>Account Segmentations</relationshipLabel>
        <relationshipName>Customer_Segmentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 Product</description>
        <inlineHelpText>Product.  The enter Product Line will automatically update the assigned Division, BU and PG in the above fields for this particular Product Line</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Account Segmentations</relationshipLabel>
        <relationshipName>Customer_Segmentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Segment_Level__c</fullName>
        <inlineHelpText>Segmentation Level must always match to the values entered on the fields ABB, ABB Service, DIV, DIV Service, BU,PG ,Product. For Example;Choose &quot;Division&quot; on segmentation level and populate up to DIV drop down list.</inlineHelpText>
        <label>Segment Level</label>
        <picklist>
            <picklistValues>
                <fullName>ABB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABB Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Division Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Line</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Segmentation_1__c</fullName>
        <description>R7B - Account Segmentation Enhancements</description>
        <inlineHelpText>Optional picklist for additional Division or BU Account segmentation partitioning</inlineHelpText>
        <label>Segmentation 1</label>
        <picklist>
            <controllingField>DIV__c</controllingField>
            <picklistValues>
                <fullName>Hunt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visits as required by Customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular PMS support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Touch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proxy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early adopter (i.e. Digital)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing account with potential to increase SoW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large existing account without potential to increase SoW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disruptor entering the T&amp;D space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential strategic partner: supply and technology partnership or investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Segmentation_6__c</fullName>
        <description>R5 - Segmentation 6</description>
        <inlineHelpText>Optional open text for additional local country Account segmentation partitioning</inlineHelpText>
        <label>Segmentation 6</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Share_of_Wallet__c</fullName>
        <description>R7B – Account Segmentation Enhancements</description>
        <inlineHelpText>ABB percent of total customer spend for the  Segment Level selected.</inlineHelpText>
        <label>Share of Wallet (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Share_of_Wallet_specific__c</fullName>
        <label>Share of Wallet (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SyncwithAccount__c</fullName>
        <defaultValue>true</defaultValue>
        <description>R7B – Account Segmentation Enhancements</description>
        <inlineHelpText>When selected the Industry Classification fields will syn with the Account.  When the Account fields are changed it, this update will be reflected in Segmentation.</inlineHelpText>
        <label>Sync with Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_Check__c</fullName>
        <description>R5 Unique Check</description>
        <label>Unique Check</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Update_Account_Segmentation__c</fullName>
        <label>Update Account Segmentation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visit_Report_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit Report Team Member</label>
        <referenceTo>Visit_Report_Team_Member__c</referenceTo>
        <relationshipLabel>Account Segmentations</relationshipLabel>
        <relationshipName>Account_Segmentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year_1__c</fullName>
        <description>R5 - Year +1 Calculation</description>
        <formula>TEXT(VALUE(TEXT(Growth_Potential_Year__c)) + 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year +1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_2__c</fullName>
        <description>R5 - Year +2 Calculation</description>
        <formula>TEXT(VALUE(TEXT(Growth_Potential_Year__c)) + 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year +2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_3__c</fullName>
        <description>R5 - Year +3 Calculation</description>
        <formula>TEXT(VALUE(TEXT(Growth_Potential_Year__c)) + 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year +3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Account_Segmentations__c</fullName>
        <description>SFDC - 4167 - Field type ‘Power of One’ for reporting purpose only</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>It shows if at least 1 record on this object was created or not (1 means that it was)</inlineHelpText>
        <label># of Account Segmentations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Segmentation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Customer_Segmentation</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>PIE_Customer_Marketing_Segmentation__c</columns>
        <columns>Flag__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Customer_Segmentation__c.Customer_Sales_Segmentation,Customer_Segmentation__c.Customer_Marketing_Segmentation</value>
        </filters>
        <label>Customer Segmentation</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CS - {0000}</displayFormat>
        <label>Account Segmentation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Segmentations</pluralLabel>
    <recordTypes>
        <fullName>Customer_Marketing_Segmentation</fullName>
        <active>true</active>
        <description>Segmentation of the account from a  product marketing perspective, to monitor the ABB ranking as a supplier for each Division/BU (Heat Maps)</description>
        <label>Heat Maps</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Sales_Segmentation</fullName>
        <active>true</active>
        <description>Account classification, definable at Division/BU/PG/PL level,  from a sales potential perspective, channel, industry usage and business segment.</description>
        <label>Account Sales Segmentation</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>BU_is_Mandatory</fullName>
        <active>true</active>
        <description>R7B – Account Segmentation Enhancements</description>
        <errorConditionFormula>AND(
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), 
 ISPICKVAL(Segment_Level__c,&apos;Business Unit&apos;), ISBLANK(TEXT(Business_Line_BU__c))
)</errorConditionFormula>
        <errorMessage>You have chosen to Segment by Business Unit. You must fill in a BU in this case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Change_Industry_and_Channel_Class</fullName>
        <active>true</active>
        <description>R7B</description>
        <errorConditionFormula>AND(
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c),
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),
SyncwithAccount__c,
RecordType.DeveloperName == &quot;Customer_Sales_Segmentation&quot;,
NOT(Bypass_Sync_Validation__c),
OR(ISCHANGED(ABB_Industry_Usage_Level1__c),ISCHANGED(ABB_Industry_Usage_Level2__c),ISCHANGED(ABB_Industry_Usage_Level3__c),
ISCHANGED(Channel_Class_Level1__c),ISCHANGED(Channel_Class_Level2__c))
)</errorConditionFormula>
        <errorMessage>You cannot change the field when sync is enabled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Division_is_Mandatory</fullName>
        <active>true</active>
        <description>R7B – Account Segmentation Enhancements</description>
        <errorConditionFormula>AND(
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),
ISBLANK(TEXT(DIV__c)),
OR( ISPICKVAL(Segment_Level__c, &apos;Division&apos;),
ISPICKVAL(Segment_Level__c, &apos;Business Unit&apos;), 
ISPICKVAL(Segment_Level__c, &apos;Product Line&apos;), 
ISPICKVAL(Segment_Level__c, &apos;Product Group&apos;), 
ISPICKVAL(Segment_Level__c, &apos;Division Service&apos;)))</errorConditionFormula>
        <errorDisplayField>DIV__c</errorDisplayField>
        <errorMessage>Division is Mandatory for the selected Segment level</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Account_Segmentation_On_Bulk_Account</fullName>
        <active>true</active>
        <description>Related Account cannot be Bulk Business.</description>
        <errorConditionFormula>AND(
    NOT($User.AccountMerge_Override__c),
    NOT($Setup.Validation_Override__c.Exclude__c),
    CONTAINS(LOWER(Account__r.Name), &apos;bulk business&apos;),
    NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
    NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c) 
)</errorConditionFormula>
        <errorMessage>Related Account cannot be Bulk Business.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Segment_Level_Validation</fullName>
        <active>true</active>
        <description>R5:Segment level must always match the hierarchy entered by the user in Division/Business Unit/Product Group/Product Line</description>
        <errorConditionFormula>AND(
NOT($Setup.Validation_Override__c.Exclude__c),
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),
OR( 
(TEXT(Business_Line_BU__c) != NULL &amp;&amp; TEXT(Segment_Level__c) == &apos;Division&apos;),
( (Product_Group__c != NULL || Product__c != NULL) &amp;&amp; (TEXT(Segment_Level__c) == &apos;Division&apos; || TEXT(Segment_Level__c) == &apos;Business Unit&apos; || TEXT(Segment_Level__c) == &apos;ABB&apos; || TEXT(Segment_Level__c) == &apos;ABB Service&apos;)),
( (Product__c != NULL) &amp;&amp; (TEXT(Segment_Level__c) != &apos;Product Line&apos;)),
( (TEXT(Business_Line_BU__c) != NULL || Product_Group__c != NULL || Product__c != NULL) &amp;&amp; (TEXT(Segment_Level__c) == &apos;Division Service&apos;))
))</errorConditionFormula>
        <errorMessage>Segment level must always match the hierarchy entered by the user in Division/Business Unit/Product Group/Product Line</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Share_Of_Wallet_Range</fullName>
        <active>true</active>
        <description>R7B - Account Segmentation Enhancements</description>
        <errorConditionFormula>AND( 
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c),
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),
OR(Share_of_Wallet__c &lt; 0,Share_of_Wallet__c &gt; 100))</errorConditionFormula>
        <errorMessage>Value cannot be below 0 or 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sync_cannot_be_false_if_DIV_is_PG</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c),
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), 
Text(DIV__c) == &apos;PG&apos;,
SyncwithAccount__c &lt;&gt; TRUE
)</errorConditionFormula>
        <errorMessage>Sync should always be enabled when Division is PG</errorMessage>
    </validationRules>
</CustomObject>